phex: version bump, add package icon

--- a/devel/applications/network/phex/files/phex.desktop
+++ b/devel/applications/network/phex/files/phex.desktop
@@ -6,7 +6,7 @@ Encoding=UTF-8
 Exec=/usr/bin/phex
 GenericName=File sharing application
 GenericName[tr]=Dosya paylaşım programı
-Icon=/usr/share/pixmaps/phex_wiz.gif
+Icon=phex
 Name=Phex
 StartupNotify=false
 Terminal=false
