- Fix desktop file so that it asks root password before launching firestarter (Fixes #7918), - Install the binary into /usr/sbin instead of /usr/bin as it needs root privileges, - Let tray icon be transparent, - Grab debian patches to fix some memleak issues, wrong website addresses, etc.
BUG:COMMENT:7918

--- a/devel/applications/network/firestarter/files/firestarter.desktop
+++ b/devel/applications/network/firestarter/files/firestarter.desktop
@@ -6,5 +6,5 @@ GenericName[tr]=Güvenlik Duvarı
 Type=Application
 Categories=Network;Application;
 Terminal=false
-Exec=firestarter
+Exec=kdesu /usr/sbin/firestarter
 Icon=firestarter
