Add trailing semi colon to desktop file

--- a/devel/applications/games/hedgewars/files/hedgewars.desktop
+++ b/devel/applications/games/hedgewars/files/hedgewars.desktop
@@ -9,4 +9,4 @@ Icon=hedgewars
 Exec=hedgewars
 Terminal=false
 StartupNotify=false
-Categories=Application;Game;StrategyGame
+Categories=Application;Game;StrategyGame;
