--- a/2008/applications/games/hedgewars/files/hedgewars.desktop
+++ b/2008/applications/games/hedgewars/files/hedgewars.desktop
@@ -9,4 +9,4 @@ Icon=hedgewars
 Exec=hedgewars
 Terminal=false
 StartupNotify=false
-Categories=Application;Game;StrategyGame
+Categories=Application;Game;StrategyGame;
