--- a/2007/applications/games/tuxtype/files/tuxtype.desktop
+++ b/2007/applications/games/tuxtype/files/tuxtype.desktop
@@ -1,14 +1,12 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=tuxtype2
+Exec=tuxtype
 Name=Tuxtype
-Name[tr]=Tuxtype
-
 Type=Application
 GenericName=Typing Tutor
-GenericName[tr]=Yazim özel öğretmen
+GenericName[tr]=Daktilo Öğretmeni
 Terminal=false
-Icon=/usr/share/tuxtype2/data/images/hands/hands.png
+Icon=/usr/share/tuxtype/data/images/keyboard/keyboard.png
 X-KDE-StartupNotify=true
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Game;
